# mc

./: Cargo.toml  Containerfile  README.md
examples/: test.rs
notes/: actions.md
scripts/: fetch-latest-server  start-minecraft
src/: cli.rs  fetch.rs  main.rs  manifest.rs  old_main.rs  server.rs  workspace.rs
src/cli/: env.rs  logging.rs
tests/fixtures/: 1.21.3.json  eula.txt  version_manifest_v2.json
