[package]
name = "mc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytesize = "2.3.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures-util = "0.3.31"
jiff = { version = "0.2.16", features = ["serde"] }
reqwest = { version = "0.12.24", features = [
    "http2",
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
