[package]
name = "mc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytesize = "2.3.0"
camino = "1.2.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
fs-err = { version = "3.2.0", features = ["tokio"] }
futures-util = "0.3.31"
jiff = { version = "0.2.16", features = ["serde"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = [
    "http2",
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
test-case = "3.3.1"
